# serializer version: 1
# name: test_human_readable_size
  '1.0 KB'
# ---
# name: test_human_readable_size.1
  '1.0 MB'
# ---
# name: test_human_readable_size.2
  '1.0 GB'
# ---
# name: test_human_readable_size.3
  '1.0 TB'
# ---
